lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/thepowerofthedream.mid
vti_encoding:SR|utf8-nl
vti_timelastmodified:TR|07 Aug 2002 05:22:43 -0000
vti_author:SR|lostface
vti_modifiedby:SR|lostface
vti_timecreated:TR|22 Jan 2001 03:44:45 -0000
vti_backlinkinfo:VX|music/thepowerofthedream.htm
vti_extenderversion:SR|4.0.2.3712
vti_syncwith_localhost\\c\:\\olympic web/c\:/olympic web:TR|13 Jan 2001 17:15:18 -0000
vti_nexttolasttimemodified:TR|13 Jan 2001 17:15:18 -0000
vti_syncwith_localhost\\c\:\\documents and settings\\ben\\my documents\\my webs\\myweb2/c\:/documents and settings/ben/my documents/my webs/myweb2:TR|07 Aug 2002 05:22:43 -0000
